# lcd_driver

./: .gitignore  CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  sample.yaml
src/: custom_led.c  custom_led.h  custom_utils.c  custom_utils.h  lcd_driver.c  lcd_driver.h  main.c
